// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditTitleBar renders correctly 1`] = `
<section
  className="section"
>
  <div
    className="titledesc"
  >
    <InputField
      className="title"
      filled={true}
      label="Dashboard title"
      name="Dashboard title input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Untitled dashboard"
      type="text"
      value="Rainbow Dash"
    />
    <TextField
      InputProps={
        Object {
          "classes": Object {
            "root": "input",
            "underline": "underline",
          },
        }
      }
      className="description"
      label="Dashboard description"
      multiline={true}
      name="Dashboard description input"
      onChange={[Function]}
      required={false}
      select={false}
      value="The blue one"
      variant="filled"
    />
  </div>
  <div
    className="itemSelector"
  >
    <ItemSelector />
  </div>
</section>
`;

exports[`EditTitleBar renders correctly when no name 1`] = `
<section
  className="section"
>
  <div
    className="titledesc"
  >
    <InputField
      className="title"
      filled={true}
      label="Dashboard title"
      name="Dashboard title input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Untitled dashboard"
      type="text"
      value=""
    />
    <TextField
      InputProps={
        Object {
          "classes": Object {
            "root": "input",
            "underline": "underline",
          },
        }
      }
      className="description"
      label="Dashboard description"
      multiline={true}
      name="Dashboard description input"
      onChange={[Function]}
      required={false}
      select={false}
      value="The blue one"
      variant="filled"
    />
  </div>
  <div
    className="itemSelector"
  >
    <ItemSelector />
  </div>
</section>
`;
